fix: add domain tests for vitest in both environments Signed-off-by: Javier Ribó <elribonazo@gmail.com>
Signed-off-by: Francisco Javier Ribo Labrador <elribonazo@gmail.com>

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "build:agnostic": "node esbuild.config.mjs",
     "types": "rm -rf build/**/*.d.ts && tsc",
     "test": "npm run test:browser && npm run test:node",
-    "test:browser": "npx vitest --config vitest.config.mjs --environment jsdom --browser  --browser.name=chrome --run tests/castor",
-    "test:node": "npx vitest --config vitest.config.mjs --environment node --run tests/castor",
+    "test:browser": "npx vitest --config vitest.config.mjs --environment jsdom --browser --browser.name=chrome --run tests/castor tests/apollo tests/domain",
+    "test:node": "npx vitest --config vitest.config.mjs --environment node --run tests/castor tests/apollo tests/domain",
     "coverage": "npm run test -- --coverage",
     "lint": "npx eslint .",
     "docs": "npx typedoc --options typedoc.js",
