fix: removing todor from codeowners and add milosh86.
Signed-off-by: Francisco Javier Ribo Labrador <elribonazo@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
-@goncalo-frade-iohk @yshyn-iohk @elribonazo @curtis-h @cristianIOHK 
+@goncalo-frade-iohk @yshyn-iohk @elribonazo @curtis-h @cristianIOHK @milosh86
 
 # Test related:
-/tests/ @amagyar-iohk @todorkoleviohk @curtis-h @elribonazo
+/tests/ @amagyar-iohk @curtis-h @elribonazo
 
 # Docs:
 *.md @petevielhaber
