fix: threshold level adjustments and add ignored paths for coverage
Signed-off-by: Francisco Javier Ribo Labrador <elribonazo@gmail.com>

--- a/demos/next/package.json
+++ b/demos/next/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@atala/prism-wallet-sdk": "../..",
+    "@hyperledger/identus-edge-agent-sdk": "../..",
     "@pluto-encrypted/indexdb": "^1.12.2",
     "crypto": "^1.0.1",
     "fs": "^0.0.1-security",
