--- a/demos/node-esm/package.json
+++ b/demos/node-esm/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@atala/prism-wallet-sdk": "../..",
+    "@hyperledger/identus-edge-agent-sdk": "../..",
     "@pluto-encrypted/inmemory": "^1.12.2",
     "prettier": "^3.0.2"
   },
